--- a/css/main.css
+++ b/css/main.css
@@ -4530,20 +4530,6 @@ hr.bold {
     .breadcrumbs a:hover {
       text-decoration: none; }
 
-img {
-  display: inline-block; }
-  img.alignleft {
-    float: left;
-    margin-right: 1em;
-    margin-bottom: .5em; }
-  img.aligncenter {
-    display: block;
-    margin: 1em auto; }
-  img.alignright {
-    float: right;
-    margin-left: 1em;
-    margin-bottom: .5em; }
-
 .content {
   position: relative;
   top: 0;
@@ -4551,6 +4537,9 @@ img {
   @media (min-width: 992px) {
     .content {
       margin-left: 270px; } }
+  @media (min-width: 1400px) {
+    .content {
+      min-height: 610px; } }
   .content__inner {
     max-width: 1100px;
     width: 100%;
@@ -4588,6 +4577,21 @@ img {
       font-size: 18px; }
     .content__body p {
       margin-bottom: 1em; }
+    .content__body img.alignleft, .content__body img.alignright, .content__body img.aligncenter {
+      display: block;
+      margin: 1em auto; }
+    @media (min-width: 768px) {
+      .content__body img.alignleft {
+        float: left;
+        margin-top: 0;
+        margin-right: 1em;
+        margin-bottom: .5em; } }
+    @media (min-width: 768px) {
+      .content__body img.alignright {
+        float: right;
+        margin-top: 0;
+        margin-left: 1em;
+        margin-bottom: .5em; } }
   .content__title {
     margin: 20px 0;
     text-align: center; }
@@ -5137,12 +5141,15 @@ img {
       margin-right: 20px; } }
 
 @media (min-width: 768px) {
+  .post-type-archive-vacancy .b-arch-content__img-wrap,
   .post-type-archive-uslugi .b-arch-content__img-wrap {
     width: 30%; } }
 @media (min-width: 768px) {
+  .post-type-archive-vacancy .b-arch-content__desc:not(.b-arch-content__desc_without-img),
   .post-type-archive-uslugi .b-arch-content__desc:not(.b-arch-content__desc_without-img) {
     margin-left: 30%; } }
 @media (min-width: 1400px) {
+  .post-type-archive-vacancy .b-arch-content__btn-wrap,
   .post-type-archive-uslugi .b-arch-content__btn-wrap {
     display: -webkit-flex;
     display: -moz-flex;
@@ -7241,5 +7248,192 @@ img {
     @media (min-width: 550px) {
       #comments .comment-form__item_author {
         padding-right: 20px; } }
+
+.sc-banner {
+  clear: both;
+  margin: 0 0 30px;
+  padding: 5% 4%;
+  color: white;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 1.3;
+  background: url() center no-repeat;
+  background-size: cover; }
+  @media (min-width: 768px) {
+    .sc-banner {
+      font-size: 26px; } }
+  .sc-banner__title {
+    font-size: 1.15em; }
+    .sc-banner__title span {
+      color: #f8615a; }
+    .sc-banner__title big {
+      font-size: 1.45em; }
+  .sc-banner ul {
+    padding: 0; }
+  .sc-banner li {
+    padding-left: 20px; }
+    @media (min-width: 768px) {
+      .sc-banner li {
+        padding-left: 40px;
+        margin-bottom: .5em; } }
+    .sc-banner li::before {
+      content: '';
+      width: 13px;
+      height: 7px;
+      border: 2px solid #f8615a;
+      border-top: 0;
+      border-right: 0;
+      transform: rotate(-45deg);
+      top: 0;
+      left: 0; }
+      @media (min-width: 768px) {
+        .sc-banner li::before {
+          width: 25px;
+          height: 15px;
+          border-width: 4px;
+          top: 1px;
+          left: 1px; } }
+
+.sc-include {
+  background: #f7f7f7;
+  margin: 30px 0;
+  padding: 5%;
+  color: #666;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.2; }
+  .sc-include__title {
+    font-size: 1.4em;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 1.5em; }
+  @media (min-width: 768px) {
+    .sc-include__list {
+      display: flex;
+      flex-wrap: wrap; } }
+  .sc-include__item {
+    margin-bottom: 40px; }
+    @media (min-width: 768px) {
+      .sc-include__item {
+        width: 33.33%;
+        padding: 0 2%; } }
+  .sc-include__caption {
+    font-size: 1.2em;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+  .sc-include__img {
+    background: white;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: 0 auto 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #999; }
+
+.sc-works {
+  margin: 30px auto;
+  text-align: center; }
+  .sc-works__title {
+    color: #666;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 20px; }
+  .sc-works__item {
+    width: 50%;
+    padding-bottom: 46%;
+    height: 0;
+    position: relative; }
+    @media (min-width: 550px) {
+      .sc-works__item {
+        width: 33.33%;
+        padding-bottom: 30%; } }
+    @media (min-width: 768px) {
+      .sc-works__item {
+        width: 25%;
+        padding-bottom: 23%; } }
+  .sc-works__inner {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10%; }
+    .sc-works__inner::before {
+      content: '';
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: black;
+      transition: all .3s 0s; }
+    .sc-works__inner:hover::before {
+      opacity: .3;
+      visibility: visible; }
+  .sc-works__list {
+    display: flex;
+    flex-wrap: wrap; }
+
+.sc-bonus {
+  margin: 30px 0;
+  padding: 30px 0;
+  border: 1px solid #e5e5e5;
+  border-left: 0;
+  border-right: 0;
+  font-size: 14px;
+  color: #666;
+  line-height: 1.2; }
+  @media (min-width: 1200px) {
+    .sc-bonus {
+      display: flex; } }
+  .sc-bonus__left {
+    text-align: center; }
+    @media (min-width: 1200px) {
+      .sc-bonus__left {
+        margin-right: 10%; } }
+  .sc-bonus__title {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #333;
+    font-size: 20px;
+    margin-bottom: 20px;
+    overflow: hidden; }
+    .sc-bonus__title span {
+      color: #f8615a;
+      font-size: 65px;
+      display: block;
+      line-height: 1; }
+  @media (min-width: 768px) {
+    .sc-bonus__list {
+      display: flex;
+      flex-wrap: wrap;
+      align-content: space-between; } }
+  .sc-bonus__item {
+    line-height: 1.6; }
+    @media (min-width: 768px) {
+      .sc-bonus__item {
+        width: 50%;
+        padding-right: 40px; } }
+  .sc-bonus__caption {
+    color: #666;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2; }
+    .sc-bonus__caption big,
+    .sc-bonus__caption span {
+      color: #f8615a; }
+    .sc-bonus__caption big {
+      font-size: 30px; }
 
 /*# sourceMappingURL=main.css.map */
