--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -135,13 +135,13 @@ hr.bold {
             font-size: 21px;
         }
         h4 {
-            font-size: 20px;
+            font-size: 16px;
         }
         h5 {
-            font-size: 19px;
+            font-size: 16px;
         }
         h6 {
-            font-size: 18px;
+            font-size: 16px;
         }
         p {
             margin-bottom: 1em;
@@ -243,7 +243,7 @@ hr.bold {
     ul {
         overflow: hidden;
         margin: 1em 0;
-        padding-left: 1.5em;
+        padding-left: 0;
     }
     li {
         padding-left: 1em;
@@ -254,7 +254,7 @@ hr.bold {
             content: '\2022';
             color: $red;
             position: absolute;
-            left: 2px;
+            left: 0;
             top: 7px;
             font-size: 13px;
             line-height: 1;
@@ -263,7 +263,6 @@ hr.bold {
     ol {
         counter-reset: list 0;
         li {
-            padding-left: 2em;
             &:before {
                 counter-increment: list;
                 content: counter(list) ".";
