правка сайдбара и рулетки

--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -38,6 +38,10 @@
     &__adr {
         font-size: 12px;
     }
+    &__time {
+        font-size: 12px;
+        margin-top: 5px;
+    }
     &__bottom-links {
         margin: 2vh 0;
     }
@@ -61,7 +65,7 @@
     }
     &__bottom {
         text-align: center;
-        margin-top: 7vh;
+        margin-top: 4vh;
     }
 }
 
