--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -6,6 +6,7 @@
     top: 0;
     z-index: 3;
     height: 100vh;
+    background: white;
     @include mn992 {
         display: block;
         box-shadow: 2px 0 8px rgba(0, 0, 0, 0.2);
@@ -67,6 +68,17 @@
         text-align: center;
         margin-top: 4vh;
     }
+}
+
+.open-form-roll .sidebar::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 8;
 }
 
 .navbar_sidebar {
